[gd_scene load_steps=14 format=3 uid="uid://26f3hx8n0hyk"]

[ext_resource type="Script" uid="uid://5kbvpjb0f2un" path="res://GUI/menu.gd" id="1_o1bug"]
[ext_resource type="FontFile" uid="uid://bm23rhih55byl" path="res://ArchitectsDaughter.ttf" id="2_bi43m"]
[ext_resource type="Texture2D" uid="uid://b1eiw26vec2x8" path="res://Assets/mainMenu.jpg" id="4_ar3vo"]
[ext_resource type="PackedScene" uid="uid://c7osil6s5ri2r" path="res://GUI/settings.tscn" id="5_go3ra"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldfg3"]
bg_color = Color(0.278431, 0.109804, 0.0509804, 0.752941)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2
shadow_offset = Vector2(2, -2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1bug"]
bg_color = Color(0.278431, 0.109804, 0.0509804, 0.905882)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2
shadow_offset = Vector2(2, -2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bi43m"]
bg_color = Color(0.278431, 0.109804, 0.0509804, 0.568627)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(2, -2)

[sub_resource type="Theme" id="Theme_l48gv"]
default_font = ExtResource("2_bi43m")
Button/colors/font_color = Color(0, 0, 0, 0.682353)
Button/colors/font_disabled_color = Color(0, 0, 0, 0.682353)
Button/colors/font_focus_color = Color(1, 1, 1, 0.682353)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 0.984314, 0.960784, 1)
Button/colors/icon_focus_color = Color(1, 1, 1, 0)
Button/colors/icon_hover_color = Color(1, 1, 1, 0)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 0)
Button/colors/icon_normal_color = Color(1, 1, 1, 0)
Button/colors/icon_pressed_color = Color(1, 1, 1, 0)
Button/styles/focus = SubResource("StyleBoxFlat_ldfg3")
Button/styles/hover = SubResource("StyleBoxFlat_o1bug")
Button/styles/normal = SubResource("StyleBoxFlat_bi43m")

[sub_resource type="Animation" id="Animation_l48gv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MainMenuCont:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 413)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MultiplayerCont:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-350, 413)]
}

[sub_resource type="Animation" id="Animation_ecwwl"]
resource_name = "slide_to_main"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MultiplayerCont:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3, 413), Vector2(-350, 413)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MainMenuCont:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-350, 413), Vector2(-3, 413)]
}

[sub_resource type="Animation" id="Animation_ytr4m"]
resource_name = "slide_to_multiplayer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MainMenuCont:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3, 413), Vector2(-350, 413)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MultiplayerCont:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-350, 413), Vector2(-2, 413)]
}

[sub_resource type="Animation" id="Animation_kk3ma"]
resource_name = "slide_to_options"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ecwwl"]
_data = {
&"RESET": SubResource("Animation_l48gv"),
&"slide_to_main": SubResource("Animation_ecwwl"),
&"slide_to_multiplayer": SubResource("Animation_ytr4m"),
&"slide_to_options": SubResource("Animation_kk3ma")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_o1bug")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="MainMenuCont" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
z_index = 1
offset_left = -3.0
offset_top = 413.0
offset_right = 338.0
offset_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_l48gv")
metadata/_edit_lock_ = true

[node name="Singleplayer" type="Button" parent="CanvasLayer/MainMenuCont"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Multiplayer")
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="CanvasLayer/MainMenuCont"]
layout_mode = 2
focus_neighbor_top = NodePath("../Singleplayer")
focus_neighbor_bottom = NodePath("../Options")
text = "Multiplayer"

[node name="Options" type="Button" parent="CanvasLayer/MainMenuCont"]
layout_mode = 2
focus_neighbor_top = NodePath("../Multiplayer")
focus_neighbor_bottom = NodePath("../Exit")
text = "Options"

[node name="Exit" type="Button" parent="CanvasLayer/MainMenuCont"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Singleplayer")
text = "Exit"

[node name="MultiplayerCont" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
z_index = 1
offset_left = -350.0
offset_top = 413.0
offset_right = -9.0
offset_bottom = 508.0
theme = SubResource("Theme_l48gv")
metadata/_edit_lock_ = true

[node name="JoinGame" type="Button" parent="CanvasLayer/MultiplayerCont"]
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
focus_neighbor_bottom = NodePath("../CreateGame")
text = "Join Game"

[node name="CreateGame" type="Button" parent="CanvasLayer/MultiplayerCont"]
layout_mode = 2
focus_neighbor_top = NodePath("../JoinGame")
text = "Create Game"

[node name="Back" type="Button" parent="CanvasLayer/MultiplayerCont"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../JoinGame")
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_ecwwl")
}

[node name="background" type="TextureRect" parent="CanvasLayer"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_ar3vo")
expand_mode = 1

[node name="OptionContainer" parent="CanvasLayer" instance=ExtResource("5_go3ra")]
unique_name_in_owner = true
visible = true
offset_top = -269.5
offset_bottom = 269.5
mouse_filter = 2

[connection signal="pressed" from="CanvasLayer/MainMenuCont/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuCont/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuCont/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenuCont/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/MultiplayerCont/JoinGame" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/MultiplayerCont/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MultiplayerCont/CreateGame" to="." method="_on_create_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MultiplayerCont/CreateGame" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/MultiplayerCont/CreateGame" to="CanvasLayer/MultiplayerCont/JoinGame" method="_on_create_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MultiplayerCont/Back" to="." method="_on_back_pressed"]
